--- a/public/components/schemas/status.yaml
+++ b/public/components/schemas/status.yaml
@@ -4,13 +4,17 @@ properties:
   timestamp:
     type: string
     format: date
+    example: 2023-03-26T15:30:34.785Z
     description: Current timestamp (ISO 8601) on the server.
   error_code:
     type: integer
+    example: 0
     description: An internal error code for the current error. If a unique platform error code is not available the HTTP status code is returned. null is returned if there is no error.
   error_message:
     type: string
+    example: successful
     description: An error message to go along with the error code.
   elapsed:
     type: number
+    example: 1
     description: Number of milliseconds taken to generate this response.
