--- a/public/paths/auth/signInGoogle.yaml
+++ b/public/paths/auth/signInGoogle.yaml
@@ -10,4 +10,14 @@ get:
   security: []
   responses:
     200:
-      description: OK
+      description: Successful
+      $ref: '../../components/schemas/responses/200.yaml'
+    400:
+      description: Conflict
+      $ref: '../../components/schemas/responses/400.yaml'
+    429:
+      description: Too Many Request
+      $ref: '../../components/schemas/responses/429.yaml'
+    500:
+      description: Internal Server Error
+      $ref: '../../components/schemas/responses/500.yaml'
