--- a/public/paths/auth/resetPassword.yaml
+++ b/public/paths/auth/resetPassword.yaml
@@ -52,44 +52,22 @@ post:
                   timestamp: 2023-02-18T14:51:41.370Z
                   error_code: 200
                   error_message: ""
-                  elapsed: 0
-                
+                  elapsed: 0    
+    400:
+      description: Bad Request
+      $ref: '../../components/schemas/responses/400.yaml'
+    401:
+      description: Unauthorized
+      $ref: '../../components/schemas/responses/401.yaml'
     404:
-      description: User not found
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                $ref: '../../components/schemas/status.yaml'
-          examples:
-            example:
-              summary: ""
-              value:
-                status:
-                  timestamp: 2023-02-18T14:51:41.370Z
-                  error_code: 401
-                  error_message: ""
-                  elapsed: 0
+      description: Not Found
+      $ref: '../../components/schemas/responses/404.yaml'
+    429:
+      description: User already exists
+      $ref: '../../components/schemas/responses/429.yaml'
     500:
       description: Internal server error
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                $ref: '../../components/schemas/status.yaml'
-          examples:
-            example:
-              summary: ""
-              value:
-                status:
-                  timestamp: 2023-02-18T14:51:41.370Z
-                  error_code: 500
-                  error_message: ""
-                  elapsed: 0
+      $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
       source: ""
@@ -119,7 +97,7 @@ get:
       description: Unique token to validate the session.
   responses:
     200: 
-      description: Ok
+      description: Successful
       content:
         application/json:
           schema:
@@ -149,52 +127,24 @@ get:
               summary: ""
               value:
                 data:
-                  id: 507f1f77bcf86cd799439011
+                  id: 6427012084270ee46cd8300c
                   email: "johndoe@example.com"
                   iat: 1679661673
                   exp: 1679662573
                 status:
-                  timestamp: 2023-02-18T14:51:41.370Z
-                  error_code: 200
-                  error_message: ""
+                  timestamp: 2023-03-30T17:24:17.230Z
+                  error_code: 0
+                  error_message: "Successful"
                   elapsed: 0
-                
     404:
-      description: User not found
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                $ref: '../../components/schemas/status.yaml'
-          examples:
-            example:
-              summary: ""
-              value:
-                status:
-                  timestamp: 2023-02-18T14:51:41.370Z
-                  error_code: 401
-                  error_message: ""
-                  elapsed: 0
+      description: Not Found
+      $ref: '../../components/schemas/responses/404.yaml'
+    429:
+      description: Too Many Request
+      $ref: '../../components/schemas/responses/429.yaml'
     500:
-      description: Internal server error
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                $ref: '../../components/schemas/status.yaml'
-          examples:
-            example:
-              summary: ""
-              value:
-                status:
-                  timestamp: 2023-02-18T14:51:41.370Z
-                  error_code: 500
-                  error_message: ""
-                  elapsed: 0
+      description: Internal Server Error
+      $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
       source: ""
