--- a/public/paths/tournaments/tournaments.yaml
+++ b/public/paths/tournaments/tournaments.yaml
@@ -7,7 +7,8 @@ get:
   summary: Get Tournament
   description: Allows to consult the information of a specific tournament
   operationId: getTournament
-  security: []
+  security: 
+    - api_key: []
   parameters:
     - in: path
       name: id
