--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-jwt": "4.0.1",
     "redlock": "^5.0.0-beta.2",
     "socket.io": "^4.6.1",
+    "spdy": "^4.0.2",
     "ts-standard": "^12.0.2",
     "tsconfig-paths": "^4.1.2",
     "yup": "^1.0.2"
@@ -57,6 +58,7 @@
     "@types/passport": "^1.0.11",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "3.0.8",
+    "@types/spdy": "^3.4.5",
     "@types/supertest": "^2.0.12",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
