--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,11 +9,14 @@ upstream expressws {
 
 # Bloque de servidor para redirigir todas las solicitudes HTTP a HTTPS
 server {
-  listen 443 ssl;
-  server_name _;
+  listen 443 ssl http2;
+  server_name api.gracehopper.xyz;
 
-  ssl_certificate /etc/nginx/cert.crt;
-  ssl_certificate_key /etc/nginx/cert.key;
+  ssl_stapling on;
+  ssl_stapling_file /etc/nginx/fullchain.pem;
+  ssl_trusted_certificate /etc/nginx/chain.pem;
+  ssl_certificate /etc/nginx/cert.pem;
+  ssl_certificate_key /etc/nginx/privkey.pem;
 
   location / {
     return 301 https://docs.gracehopper.xyz;
@@ -28,7 +31,7 @@ server {
     proxy_set_header Origin $http_origin; 
 
     # Configuración para soportar WebSockets
-    proxy_http_version 1.1;
+    proxy_http_version 1.1, 2.0;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
   }
@@ -36,17 +39,20 @@ server {
 
 server {
   listen 8443 ssl;
-  server_name _;
+  server_name api.gracehopper.xyz;
 
-  ssl_certificate /etc/nginx/cert.crt;
-  ssl_certificate_key /etc/nginx/cert.key;
+  ssl_stapling on;
+  ssl_stapling_file /etc/nginx/fullchain.pem;
+  ssl_trusted_certificate /etc/nginx/chain.pem;
+  ssl_certificate /etc/nginx/cert.pem;
+  ssl_certificate_key /etc/nginx/privkey.pem;
 
   proxy_set_header Host $host;
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
   # Configuración para soportar WebSockets
-  proxy_http_version 1.1;
+  proxy_http_version 1.1, 2.0;
   proxy_set_header Upgrade $http_upgrade;
   proxy_set_header Connection "upgrade";
 
