--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -66,7 +66,7 @@ jobs:
         CERT: ${{ secrets.CERT }}
         KEY: ${{ secrets.KEY }}
       run: |
-        mkdir -p nginx/api.gracehopper.xyz && echo "$CERT" | xargs base64 -d > api.gracehopper.xyz/cert.pem
-        mkdir -p nginx/api.gracehopper.xyz && echo "$KEY" | xargs base64 -d > api.gracehopper.xyz/privkey.pem
+        mkdir -p nginx/api.gracehopper.xyz && echo "$CERT" | xargs base64 -d > nginx/api.gracehopper.xyz/cert.pem
+        mkdir -p nginx/api.gracehopper.xyz && echo "$KEY" | xargs base64 -d > nginx/api.gracehopper.xyz/privkey.pem
     - name: Test
       run: npm run test
