nginx conf y deploy.sh

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,12 @@
 # Configuración general de NGINX
 upstream expresshttp {
-  server express:4000;
+  # server express:4000;
+  server reign-chess.duckdns.org:4000;
 }
 
 upstream expressws {
-  server express:4001;
+  # server express:4001;
+  server reign-chess.duckdns.org:4001;
 }
 
 # Bloque de servidor para redirigir todas las solicitudes HTTP a HTTPS
@@ -12,11 +14,12 @@ server {
   listen 443 ssl http2;
   server_name api.gracehopper.xyz;
 
-  ssl_stapling on;
-  ssl_stapling_file /etc/nginx/fullchain.pem;
-  ssl_trusted_certificate /etc/nginx/chain.pem;
   ssl_certificate /etc/nginx/cert.pem;
   ssl_certificate_key /etc/nginx/privkey.pem;
+
+  ssl_stapling on;
+  ssl_stapling_verify on;
+  ssl_trusted_certificate /etc/nginx/fullchain.pem;
 
   location / {
     return 301 https://docs.gracehopper.xyz;
@@ -31,28 +34,29 @@ server {
     proxy_set_header Origin $http_origin; 
 
     # Configuración para soportar WebSockets
-    proxy_http_version 1.1, 2.0;
+    proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
   }
 }
 
 server {
-  listen 8443 ssl;
+  listen 8443 ssl http2;
   server_name api.gracehopper.xyz;
 
-  ssl_stapling on;
-  ssl_stapling_file /etc/nginx/fullchain.pem;
-  ssl_trusted_certificate /etc/nginx/chain.pem;
   ssl_certificate /etc/nginx/cert.pem;
   ssl_certificate_key /etc/nginx/privkey.pem;
+
+  ssl_stapling on;
+  ssl_stapling_verify on;
+  ssl_trusted_certificate /etc/nginx/fullchain.pem;
 
   proxy_set_header Host $host;
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
   # Configuración para soportar WebSockets
-  proxy_http_version 1.1, 2.0;
+  proxy_http_version 1.1;
   proxy_set_header Upgrade $http_upgrade;
   proxy_set_header Connection "upgrade";
 
