deploy.sh pendiente de modificar la parte de express

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,7 +27,7 @@ server {
 
   # Manejar todas las demás solicitudes
   location /v1 {
-    proxy_pass http://expresshttp;
+    proxy_pass https://expresshttp;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -54,6 +54,6 @@ server {
   proxy_set_header Connection "upgrade";
 
   location / {
-    proxy_pass http://expressws;
+    proxy_pass https://expressws;
   }
 }
