--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "jsonwebtoken": "9.0.0",
     "mongoose": "6.9.0",
     "morgan": "1.9.1",
-    "passport": "^0.6.0",
+    "passport": "0.5.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "4.0.1",
     "redlock": "^5.0.0-beta.2",
