--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ioredis": "^5.3.1",
     "jsonwebtoken": "9.0.0",
     "mongoose": "6.9.0",
+    "mongoose-query-parser": "^1.3.1",
     "morgan": "1.9.1",
     "passport": "0.5.0",
     "passport-google-oauth20": "^2.0.0",
