--- a/public/paths/webhooks/surrender.yaml
+++ b/public/paths/webhooks/surrender.yaml
@@ -1,6 +1,6 @@
 get:
   servers: 
-    - url: 'http://localhost:4001'
+    - url: 'https://localhost:4001'
     - url: 'https://api.gracehopper.xyz:8443'
   tags: 
     - Game
