--- a/public/paths/auth/signOut.yaml
+++ b/public/paths/auth/signOut.yaml
@@ -1,6 +1,6 @@
 post:
   servers: 
-    - url: 'http://localhost:4000/v1'
+    - url: 'https://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - Auth
