--- a/public/paths/auth/signUp.yaml
+++ b/public/paths/auth/signUp.yaml
@@ -1,6 +1,6 @@
 post:
   servers: 
-    - url: 'http://localhost:4000/v1'
+    - url: 'https://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - Auth
@@ -32,6 +32,7 @@ post:
               type: string
               format: password
               example: qwerty
+              minLength: 8
               description: Password to protect the user's profile
   responses:
     201:
