--- a/public/paths/tournaments/allTournaments.yaml
+++ b/public/paths/tournaments/allTournaments.yaml
@@ -1,12 +1,66 @@
 post:
   servers: 
-    - url: 'http://localhost:4000/v1'
+    - url: 'https://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - Tournament
   summary: Create Tournament
   description: Allows you to create a tournament
   operationId: postTournaments
+  security:
+    - api_key: []
+  requestBody:
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            startTime:
+              type: string
+              format: date 
+              example: 2023-04-02T18:08:59.561Z
+              description: Tournament start date.
+            rounds:
+              type: integer
+              description: Number of tournament rounds.
+
+  responses:
+    200:
+      description: Successful
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              data:
+                $ref: '../../components/schemas/tournament.yaml'
+              status:
+                $ref: '../../components/schemas/status.yaml'
+    401:
+      description: Unauthorized
+      $ref: '../../components/schemas/responses/401.yaml'
+    409:
+      description: Conflict
+      $ref: '../../components/schemas/responses/409.yaml'
+    429:
+      description: Too Many Request
+      $ref: '../../components/schemas/responses/429.yaml'
+    500:
+      description: Internal Server Error
+      $ref: '../../components/schemas/responses/500.yaml'
+  x-codeSamples:
+    - lang: cURL
+      source: ""
+
+get:
+  servers: 
+    - url: 'https://localhost:4000/v1'
+    - url: 'https://api.gracehopper.xyz/v1'
+  tags:
+    - Tournament
+  summary: All Tournaments
+  description: Allows to query the information of all tournaments
+  operationId: getAllTournament
   security:
     - api_key: []
   parameters:
@@ -22,93 +76,29 @@ post:
       description: Max number of results on one page.
   responses:
     200:
-      description: Authorized
+      description: Successful
       content:
         application/json:
           schema:
             type: object
             properties:
+              meta:
+                $ref: '../../components/schemas/meta.yaml'
+              data:
+                type: array
+                items:
+                  $ref: '../../components/schemas/tournament.yaml'
               status:
-                $ref: '../../components/schemas/status.yaml'
-          examples:
-            example:
-              summary: ""
-              value:
-                status:
-                  timestamp: 2023-02-18T14:51:41.370Z
-                  error_code: 200
-                  error_message: ""
-                  elapsed: 0
+                  $ref: '../../components/schemas/status.yaml'
     401:
       description: Unauthorized
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                $ref: '../../components/schemas/status.yaml'
-          examples:
-            example:
-              summary: ""
-              value:
-                status:
-                  timestamp: 2023-02-18T14:51:41.370Z
-                  error_code: 401
-                  error_message: ""
-                  elapsed: 0
-  x-codeSamples:
-    - lang: cURL
-      source: ""
-
-get:
-  servers: 
-    - url: 'http://localhost:4000/v1'
-    - url: 'https://api.gracehopper.xyz/v1'
-  tags:
-    - Tournament
-  summary: All Tournaments
-  description: Allows to query the information of all tournaments
-  operationId: getAllTournament
-  security:
-    - api_key: []
-  responses:
-    200:
-      description: Authorized
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                $ref: '../../components/schemas/status.yaml'
-          examples:
-            example:
-              summary: ""
-              value:
-                status:
-                  timestamp: 2023-02-18T14:51:41.370Z
-                  error_code: 200
-                  error_message: ""
-                  elapsed: 0
-    401:
-      description: Unauthorized
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                $ref: '../../components/schemas/status.yaml'
-          examples:
-            example:
-              summary: ""
-              value:
-                status:
-                  timestamp: 2023-02-18T14:51:41.370Z
-                  error_code: 401
-                  error_message: ""
-                  elapsed: 0
+      $ref: '../../components/schemas/responses/401.yaml'
+    429:
+      description: Too Many Request
+      $ref: '../../components/schemas/responses/429.yaml'
+    500:
+      description: Internal Server Error
+      $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
       source: ""
