--- a/public/paths/tournaments/joinTournaments.yaml
+++ b/public/paths/tournaments/joinTournaments.yaml
@@ -1,6 +1,6 @@
 get:
   servers: 
-    - url: 'http://localhost:4000/v1'
+    - url: 'https://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - Tournament
@@ -18,41 +18,20 @@ get:
       description: ID of the tournament to join
   responses:
     200:
-      description: Authorized
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                $ref: '../../components/schemas/status.yaml'
-          examples:
-            example:
-              summary: ""
-              value:
-                status:
-                  timestamp: 2023-02-18T14:51:41.370Z
-                  error_code: 200
-                  error_message: ""
-                  elapsed: 0
+      description: Successful
+      $ref: '../../components/schemas/responses/200.yaml'
     401:
       description: Unauthorized
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                $ref: '../../components/schemas/status.yaml'
-          examples:
-            example:
-              summary: ""
-              value:
-                status:
-                  timestamp: 2023-02-18T14:51:41.370Z
-                  error_code: 401
-                  error_message: ""
-                  elapsed: 0
+      $ref: '../../components/schemas/responses/401.yaml'
+    409:
+      description: Conflict
+      $ref: '../../components/schemas/responses/409.yaml'
+    429:
+      description: Too Many Request
+      $ref: '../../components/schemas/responses/429.yaml'
+    500:
+      description: Internal Server Error
+      $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
       source: ""
