--- a/public/paths/users/getUser.yaml
+++ b/public/paths/users/getUser.yaml
@@ -1,6 +1,6 @@
 get:
   servers: 
-    - url: 'http://localhost:4000/v1'
+    - url: 'https://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - User
@@ -78,7 +78,7 @@ get:
 
 patch:
   servers: 
-    - url: 'http://localhost:4000/v1'
+    - url: 'https://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - User
@@ -112,6 +112,7 @@ patch:
               description: New user name for the user to log in to the system.
             email: 
               type: string
+              format: email
               example: johndoe@example.com
               uniqueItems: true
               description: New email address for a user.
@@ -149,7 +150,7 @@ patch:
                   avatar: "https://api.gracehopper.xyz/assets/avatar"
                   username: johndoe
                   email: "johndoe@example.com"
-                  google: true
+                  google: false
                   verified: false
                   games: https://api.gracehopper.xyz/v1/games?userId=6427012084270ee46cd8300c
                   elo: 800
@@ -196,7 +197,7 @@ patch:
 
 delete:
   servers: 
-    - url: 'http://localhost:4000/v1'
+    - url: 'https://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - User
