--- a/public/paths/auth/resetPassword.yaml
+++ b/public/paths/auth/resetPassword.yaml
@@ -1,6 +1,6 @@
 post:
   servers: 
-    - url: 'https://localhost:4000/v1'
+    - url: 'http://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - Auth
@@ -59,7 +59,7 @@ post:
       
 get:
   servers: 
-    - url: 'https://localhost:4000/v1'
+    - url: 'http://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - Auth
