--- a/public/paths/tournaments/allTournaments.yaml
+++ b/public/paths/tournaments/allTournaments.yaml
@@ -1,6 +1,6 @@
 post:
   servers: 
-    - url: 'https://localhost:4000/v1'
+    - url: 'http://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - Tournament
@@ -54,7 +54,7 @@ post:
 
 get:
   servers: 
-    - url: 'https://localhost:4000/v1'
+    - url: 'http://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - Tournament
