--- a/public/paths/users/getAllUsers.yaml
+++ b/public/paths/users/getAllUsers.yaml
@@ -1,6 +1,6 @@
 get:
   servers: 
-    - url: 'https://localhost:4000/v1'
+    - url: 'http://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - User
