--- a/public/paths/users/getUser.yaml
+++ b/public/paths/users/getUser.yaml
@@ -1,6 +1,6 @@
 get:
   servers: 
-    - url: 'https://localhost:4000/v1'
+    - url: 'http://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - User
@@ -78,7 +78,7 @@ get:
 
 patch:
   servers: 
-    - url: 'https://localhost:4000/v1'
+    - url: 'http://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - User
@@ -197,7 +197,7 @@ patch:
 
 delete:
   servers: 
-    - url: 'https://localhost:4000/v1'
+    - url: 'http://localhost:4000/v1'
     - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - User
