--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,25 +1,21 @@
 # Configuración general de NGINX
 upstream expresshttp {
-  # server express:4000;
-  server reign-chess.duckdns.org:4000;
+  server express:4000;
+  # server reign-chess.duckdns.org:4000;
 }
 
 upstream expressws {
-  # server express:4001;
-  server reign-chess.duckdns.org:4001;
+  server express:4001;
+  # server reign-chess.duckdns.org:4001;
 }
 
 # Bloque de servidor para redirigir todas las solicitudes HTTP a HTTPS
 server {
-  listen 443 ssl http2;
+  listen 443 ssl;
   server_name api.gracehopper.xyz;
 
-  ssl_certificate /etc/nginx/cert.pem;
+  ssl_certificate /etc/nginx/fullchain.pem;
   ssl_certificate_key /etc/nginx/privkey.pem;
-
-  ssl_stapling on;
-  ssl_stapling_verify on;
-  ssl_trusted_certificate /etc/nginx/fullchain.pem;
 
   location / {
     return 301 https://docs.gracehopper.xyz;
@@ -27,7 +23,7 @@ server {
 
   # Manejar todas las demás solicitudes
   location /v1 {
-    proxy_pass https://expresshttp;
+    proxy_pass http://expresshttp;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -36,15 +32,11 @@ server {
 }
 
 server {
-  listen 8443 ssl http2;
+  listen 8443 ssl;
   server_name api.gracehopper.xyz;
 
-  ssl_certificate /etc/nginx/cert.pem;
+  ssl_certificate /etc/nginx/fullchain.pem;
   ssl_certificate_key /etc/nginx/privkey.pem;
-
-  ssl_stapling on;
-  ssl_stapling_verify on;
-  ssl_trusted_certificate /etc/nginx/fullchain.pem;
 
   proxy_set_header Host $host;
   proxy_set_header X-Real-IP $remote_addr;
@@ -54,6 +46,6 @@ server {
   proxy_set_header Connection "upgrade";
 
   location / {
-    proxy_pass https://expressws;
+    proxy_pass http://expressws;
   }
 }
