--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "set NODE_ENV=test && nyc mocha --exit --timeout 5000 -r ts-node/register -r tsconfig-paths/register \"test/**/*.ts\""
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "body-parser": "1.20.1",
     "chess.ts": "^0.16.2",
     "cookie-parser": "1.4.4",
