--- a/public/paths/tournaments/tournaments.yaml
+++ b/public/paths/tournaments/tournaments.yaml
@@ -19,7 +19,15 @@ get:
   responses:
     200:
       description: Successful
-      $ref: '../../components/schemas/responses/200.yaml'
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              data:
+                $ref: '../../components/schemas/tournament.yaml'
+              status:
+                $ref: '../../components/schemas/status.yaml'
     401:
       description: Unauthorized
       $ref: '../../components/schemas/responses/401.yaml'
@@ -59,12 +67,8 @@ patch:
           schema:
             type: object
             properties:
-              meta:
-                $ref: '../../components/schemas/meta.yaml'
               data:
-                type: array
-                items:
-                  $ref: '../../components/schemas/tournament.yaml'
+                $ref: '../../components/schemas/tournament.yaml'
               status:
                   $ref: '../../components/schemas/status.yaml'
     401:
