--- a/public/paths/auth/forgotPassword.yaml
+++ b/public/paths/auth/forgotPassword.yaml
@@ -67,4 +67,9 @@ post:
       $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
-      source: ""
+      source: |
+        curl  --location --request POST 'https://api.gracehopper.xyz/v1/auth/forgot-password' \
+              --header 'Content-Type: application/json' \
+              --data-raw '{
+                  "email": "johndoe@example.com"
+              }'
