--- a/public/paths/auth/resetPassword.yaml
+++ b/public/paths/auth/resetPassword.yaml
@@ -55,7 +55,12 @@ post:
       $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
-      source: ""
+      source: |
+        curl  --location --request POST 'https://api.gracehopper.xyz/v1/auth/reset-password/USER_ID/RESET_TOKEN' \
+              --header 'Content-Type: application/json' \
+              --data '{
+                  "password": "12345678"
+              }'
       
 get:
   servers: 
@@ -132,4 +137,5 @@ get:
       $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
-      source: ""
+      source: |
+        curl --location 'https://api.gracehopper.xyz/v1/auth/reset-password/USER_ID/RESET_TOKEN'
