--- a/public/paths/auth/verify.yaml
+++ b/public/paths/auth/verify.yaml
@@ -36,4 +36,5 @@ post:
       $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
-      source: ""
+      source: |
+        curl --location 'https://api.gracehopper.xyz/v1/auth/verify/USER_ID/VERIFICATION_TOKEN'
