--- a/public/paths/ping/securePing.yaml
+++ b/public/paths/ping/securePing.yaml
@@ -24,4 +24,6 @@ get:
       $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
-      source: ""
+      source: |
+        curl  --location 'https://api.gracehopper.xyz/v1/health/secure-ping' \
+              --header 'Cookie: api-auth=JWT_TOKEN'
