--- a/public/paths/users/getAllUsers.yaml
+++ b/public/paths/users/getAllUsers.yaml
@@ -89,4 +89,6 @@ get:
       $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
-      source: ""
+      source: |
+        curl  --location 'https://api.gracehopper.xyz/v1/users'
+              --header 'Cookie: api-auth=JWT_TOKEN'
