--- a/public/paths/games/getAllGames.yaml
+++ b/public/paths/games/getAllGames.yaml
@@ -47,4 +47,6 @@ get:
       $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
-      source: ""
+      source: |
+        curl  --location 'https://api.gracehopper.xyz/v1/games'
+              --header 'Cookie: api-auth=JWT_TOKEN'
