--- a/public/paths/games/getGame.yaml
+++ b/public/paths/games/getGame.yaml
@@ -42,4 +42,6 @@ get:
       $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
-      source: ""
+      source: |
+        curl  --location 'https://api.gracehopper.xyz/v1/games/GAME_ID'
+              --header 'Cookie: api-auth=JWT_TOKEN'
