--- a/public/paths/tournaments/leaveTournaments.yaml
+++ b/public/paths/tournaments/leaveTournaments.yaml
@@ -31,4 +31,6 @@ get:
       $ref: '../../components/schemas/responses/500.yaml'
   x-codeSamples:
     - lang: cURL
-      source: ""
+      source: |
+        curl  --location 'https://api.gracehopper.xyz/v1/tournaments/leave/TOURNAMENT_ID' \
+              --header 'Cookie: api-auth=JWT_TOKEN'
